// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EphemeralForm shows field titles 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <form
            class="rjsf"
          >
            <div
              class="form-group"
            >
              <div
                class="my-1"
                id="root__title"
              >
                <h5>
                  Test Form
                </h5>
                <hr
                  class="border-0 bg-secondary"
                  style="height: 1px;"
                />
              </div>
              <div
                class="p-0 container-fluid"
              >
                <div
                  class="row"
                  style="margin-bottom: 10px;"
                >
                  <div
                    class="col-12"
                  >
                     
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="root_foo"
                      >
                        foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        class="form-control"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value=""
                      />
                      
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-content"
    >
      <div
        class="modal-body"
      >
        <form
          class="rjsf"
        >
          <div
            class="form-group"
          >
            <div
              class="my-1"
              id="root__title"
            >
              <h5>
                Test Form
              </h5>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="p-0 container-fluid"
            >
              <div
                class="row"
                style="margin-bottom: 10px;"
              >
                <div
                  class="col-12"
                >
                   
                  <div
                    class="form-group"
                  >
                    <label
                      class="form-label"
                      for="root_foo"
                    >
                      foo
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      class="form-control"
                      id="root_foo"
                      name="root_foo"
                      placeholder=""
                      type="text"
                      value=""
                    />
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EphemeralForm supports markdown in field descriptions 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <form
            class="rjsf"
          >
            <div
              class="form-group"
            >
              <div
                class="my-1"
                id="root__title"
              >
                <h5>
                  Test Form
                </h5>
                <hr
                  class="border-0 bg-secondary"
                  style="height: 1px;"
                />
              </div>
              <div
                class="p-0 container-fluid"
              >
                <div
                  class="row"
                  style="margin-bottom: 10px;"
                >
                  <div
                    class="col-12"
                  >
                     
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="root_foo"
                      >
                        Foo
                      </label>
                      <input
                        aria-describedby="root_foo__error root_foo__description root_foo__help"
                        class="form-control"
                        id="root_foo"
                        name="root_foo"
                        placeholder=""
                        type="text"
                        value=""
                      />
                      <div
                        class="field-description text-muted"
                        id="root_foo"
                      >
                        <div>
                          <p>
                            I am 
                            <strong>
                              bold
                            </strong>
                          </p>
                          

                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-content"
    >
      <div
        class="modal-body"
      >
        <form
          class="rjsf"
        >
          <div
            class="form-group"
          >
            <div
              class="my-1"
              id="root__title"
            >
              <h5>
                Test Form
              </h5>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="p-0 container-fluid"
            >
              <div
                class="row"
                style="margin-bottom: 10px;"
              >
                <div
                  class="col-12"
                >
                   
                  <div
                    class="form-group"
                  >
                    <label
                      class="form-label"
                      for="root_foo"
                    >
                      Foo
                    </label>
                    <input
                      aria-describedby="root_foo__error root_foo__description root_foo__help"
                      class="form-control"
                      id="root_foo"
                      name="root_foo"
                      placeholder=""
                      type="text"
                      value=""
                    />
                    <div
                      class="field-description text-muted"
                      id="root_foo"
                    >
                      <div>
                        <p>
                          I am 
                          <strong>
                            bold
                          </strong>
                        </p>
                        

                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EphemeralForm supports markdown in form description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <form
            class="rjsf"
          >
            <div
              class="form-group"
            >
              <div
                class="my-1"
                id="root__title"
              >
                <h5>
                  Test Form
                </h5>
                <hr
                  class="border-0 bg-secondary"
                  style="height: 1px;"
                />
              </div>
              <div>
                <div
                  class="mb-3"
                  id="root__description"
                >
                  I am **bold**
                </div>
              </div>
              <div
                class="p-0 container-fluid"
              />
            </div>
            <div>
              <button
                class="btn btn-primary"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-content"
    >
      <div
        class="modal-body"
      >
        <form
          class="rjsf"
        >
          <div
            class="form-group"
          >
            <div
              class="my-1"
              id="root__title"
            >
              <h5>
                Test Form
              </h5>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div>
              <div
                class="mb-3"
                id="root__description"
              >
                I am **bold**
              </div>
            </div>
            <div
              class="p-0 container-fluid"
            />
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
